[gd_scene load_steps=32 format=2]

[ext_resource path="res://Recursos/Eddie/Eddie00.png" type="Texture" id=1]
[ext_resource path="res://script_boss.gd" type="Script" id=2]
[ext_resource path="res://Recursos/Eddie/Eddie01.png" type="Texture" id=3]
[ext_resource path="res://Recursos/Eddie/Eddie03.png" type="Texture" id=4]
[ext_resource path="res://Recursos/Eddie/Eddie02.png" type="Texture" id=5]
[ext_resource path="res://Recursos/Eddie/EddieRight00.png" type="Texture" id=6]
[ext_resource path="res://Recursos/Eddie/EddieRight02.png" type="Texture" id=7]
[ext_resource path="res://Recursos/Eddie/EddieRight03.png" type="Texture" id=8]
[ext_resource path="res://Recursos/Eddie/EddieLeft02.png" type="Texture" id=9]
[ext_resource path="res://Recursos/Eddie/EddieLeft00.png" type="Texture" id=10]
[ext_resource path="res://Recursos/Eddie/EddieLeft01.png" type="Texture" id=11]
[ext_resource path="res://Recursos/Eddie/EddieLeft03.png" type="Texture" id=12]
[ext_resource path="res://Recursos/Eddie/EddieRight01.png" type="Texture" id=13]
[ext_resource path="res://Recursos/Eddie/EddieExplosao00.png" type="Texture" id=14]
[ext_resource path="res://Recursos/Eddie/EddieExplosao09.png" type="Texture" id=15]
[ext_resource path="res://Recursos/Eddie/EddieExplosao01.png" type="Texture" id=16]
[ext_resource path="res://Recursos/Eddie/EddieExplosao12.png" type="Texture" id=17]
[ext_resource path="res://Recursos/Eddie/EddieExplosao10.png" type="Texture" id=18]
[ext_resource path="res://Recursos/Eddie/EddieExplosao06.png" type="Texture" id=19]
[ext_resource path="res://Recursos/Eddie/EddieExplosao07.png" type="Texture" id=20]
[ext_resource path="res://Recursos/Eddie/EddieExplosao13.png" type="Texture" id=21]
[ext_resource path="res://Recursos/Eddie/EddieExplosao14.png" type="Texture" id=22]
[ext_resource path="res://Recursos/Eddie/EddieExplosao11.png" type="Texture" id=23]
[ext_resource path="res://Recursos/Eddie/EddieExplosao03.png" type="Texture" id=24]
[ext_resource path="res://Recursos/Eddie/EddieExplosao04.png" type="Texture" id=25]
[ext_resource path="res://Recursos/Eddie/EddieExplosao02.png" type="Texture" id=26]
[ext_resource path="res://Recursos/Eddie/EddieExplosao08.png" type="Texture" id=27]
[ext_resource path="res://Recursos/Eddie/EddieExplosao05.png" type="Texture" id=28]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "voando",
"speed": 70.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "direita",
"speed": 70.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 12 ) ],
"loop": true,
"name": "esquerda",
"speed": 70.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 16 ), ExtResource( 26 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 28 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 27 ), ExtResource( 15 ), ExtResource( 18 ), ExtResource( 23 ), ExtResource( 17 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": false,
"name": "explodindo",
"speed": 10.0
} ]

[sub_resource type="Animation" id=2]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.733333, 0.00784314, 0.00784314, 1 ), Color( 1, 1, 1, 1 ), Color( 0.733333, 0.00784314, 0.00784314, 1 ), Color( 1, 1, 1, 1 ), Color( 0.733333, 0.00784314, 0.00784314, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "inicio_boss"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0.494118 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0.494118 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0.494118 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0.494118 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0.494118 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Node2D" type="Node2D"]
pause_mode = 1
position = Vector2( 504, -88 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -16 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="Area2D"]
scale = Vector2( 0.371305, 0.371305 )
frames = SubResource( 1 )
animation = "voando"
frame = 2
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
visible = false
scale = Vector2( 0.371305, 0.371305 )
polygon = PoolVector2Array( 5.5, -202.5, 5.5, -185.8, 11.5, -194, 24.6, -194, 41.5, -192.9, 41.5, -191.7, 64.5, -187.7, 64.5, -185.9, 75.5, -173.8, 75.5, -164.5, 69.7, -153, 68.4, -153, 56.3, -142, 54, -142, 34.9, -133, 30.8, -133, 12.5, -130.3, 12.5, -129, 18.4, -50, 19.1, -50, 31.5, -42.1, 31.5, -39, 33.3, -21, 39.5, -21, 39.5, -18.7, 43.5, -13.7, 43.5, 2.7, 41.7, 5, 49.6, 5, 124.5, 15.3, 124.5, 16.5, 178.5, 30.5, 178.5, 31.6, 199.5, 39.6, 199.5, 40.7, 223.5, 53.8, 223.5, 55.1, 238.5, 69.2, 238.5, 85, 228.4, 96, 225.1, 96, 219.1, 100, 215.6, 100, 181.7, 108, 173.7, 108, 103.6, 114, 71.5, 114, 26.5, 114.9, 26.5, 115.8, 30.5, 117.8, 30.5, 121.1, 27.5, 143.2, 29.9, 145.5, 28.8, 148, 27.3, 157, 25.3, 157, 19.5, 162.8, 19.5, 166.4, 18.5, 169, 26.7, 169, 65.5, 177.4, 65.5, 179.2, 67.9, 181.5, 66.8, 184, 64.9, 184, 53.5, 186.5, 53.5, 184.8, 13.2, 181.2, 2.39999, 193, -1.39999, 193, -10.4, 182, -12.2, 182, -39.2, 190, -49.6, 190, -62.5, 188.8, -62.5, 183.7, -36, 171, -30.7, 171, -16.5, 169.2, -18, 164, -19.6, 164, -28.5, 150.6, -28.5, 144, -29.5, 117, -26.8, 117, -22.5, 116.3, -69.6, 116, -195.5, 107.9, -195.5, 106.7, -223.5, 100.6, -223.5, 99.5, -230.5, 97.5, -230.5, 95.9, -238.5, 88.7, -238.5, 71.3, -213.3, 48, -211, 48, -172, 29, -167.7, 29, -118.8, 15, -112.8, 15, -41.6, 5.2, -43.7, -13, -41.9, -13, -39.9, -18, -37, -18, -36.5, -18.2, -36.5, -28, -37.7, -40, -35.4, -40, -29.4, -47, -26.8, -47, -19.5, -49.4, -19.5, -58.1, -13.7, -130, -17.7, -130, -41.5, -134.3, -41.5, -135.7, -60.5, -143.7, -60.5, -145.1, -73.5, -156.1, -73.5, -159, -77, -174, -74.7, -174, -69.7, -184, -67, -184, -57.1, -190, -52.7, -190, -11.5, -194.2, -11.5, -191.8, -7, -187.3, -5.5, -193, -5.5, -203, 3.8, -203 )

[node name="Timer" type="Timer" parent="Area2D"]
wait_time = 1.5
autostart = true

[node name="Position2D" type="Position2D" parent="Area2D"]
position = Vector2( -48, 48 )

[node name="Position2D2" type="Position2D" parent="Area2D"]
position = Vector2( 48, 48 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2D"]
anims/dano_boss = SubResource( 2 )
anims/inicio_boss = SubResource( 3 )

[node name="Timer2" type="Timer" parent="Area2D"]
wait_time = 2.0
one_shot = true
autostart = true
[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="Area2D/Sprite" to="Area2D" method="_on_Sprite_animation_finished"]
[connection signal="timeout" from="Area2D/Timer" to="Area2D" method="_on_Timer_timeout"]
[connection signal="timeout" from="Area2D/Timer2" to="Area2D" method="_on_Timer2_timeout"]
